layout issues

--- a/web/style/vrijwilligt.less
+++ b/web/style/vrijwilligt.less
@@ -576,6 +576,7 @@ h3 {.grijzetitel(); }
 			div.option {.flex(0 1 270px); }
 		}
 		.frm_vacancy_renumeration .vals input {margin-left: 10px; }
+		.submits>div {float: left; }
 	}
 	#person_skills, #edit_person_skills, #organisation_sectors, #vacancy_skills {
 		.flex-display(flex); .flex-flow(row wrap);
